fix missing parentheses

--- a/lecture-4.ipynb
+++ b/lecture-4.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install seaborn --upgrade"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -300,7 +291,7 @@
     "# what does the trapezoidal integral give in this case?\n",
     "\n",
     "print('With n_points = %d, the trapezoidal approximation gives %lf' % \n",
-    "      (n_points, integrate_trapezoidal(f, a, b, n_points))"
+    "     (n_points, integrate_trapezoidal(f, a, b, n_points)))"
    ]
   },
   {
@@ -389,7 +380,7 @@
    "source": [
     "# what does the integral with Simpson's rule give in this case?\n",
     "\n",
-    "print(\"With n_points = %d, Simpson's rule gives %lf\" % (n_points, integrate_simpson(f, a, b, n_points))"
+    "print(\"With n_points = %d, Simpson's rule gives %lf\" % (n_points, integrate_simpson(f, a, b, n_points)))"
    ]
   },
   {
@@ -467,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
